# twflagdesign

./: .containerignore  .env_bak  .gitignore  Containerfile  README.md  backfill_uuids.py  config.py  create_pod.sh  debug_designs.py  deduplicate_designs.py  google_auth_setup.md  inspect_duplicates.py  main.py  pyproject.toml  remove_duplicates.py  requirements.txt  scan_categories.py  start_app.sh
app/: __init__.py  models.py
app/main/: routes.py
app/static/css/: base.css  variables.css
app/static/js/: autocomplete.js
app/templates/: 404.html  design_detail.html  discuss.html  edit_comment.html  edit_design.html  edit_post.html  index.html  layout.html  partials_post_list.html  submit.html
instance/: site.db
migrations/versions/: 46e2e8285444_initial_migration.py  bf0315a7e2ba_add_hashtags_to_design.py
src/: debug_post.py  debug_sort.py  diagnose_duplicates.py  find_missing_post.py  inspect_post_content.py  migrate_gplus.py  promote_admin.py  reimport_colonial.py  restore_all_images.py  run.py  search_spaces.py
src/app/: __init__.py
src/app/auth/: routes.py
src/app/static/js/: main.js
src/app/templates/: _design_card.html  _post_card.html  admin_users.html  confirm_delete.html  design_detail.html  edit_design.html  hashtags.html  index.html  layout.html  partials_design_list.html
src/instance/: site.db
src/migrations/versions/: 57234a50dbd2_add_public_id_to_design_retry_2.py  a1548a0e9511_add_image_filename_to_post.py  cb08736d0d9b_add_subject_to_post.py
