[project]
name = "twflagdesign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib==1.3.0",
    "flask==3.0.0",
    "flask-login==0.6.3",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==21.2.0",
    "requests==2.31.0",
]
